fixed list spacing

--- a/style.css
+++ b/style.css
@@ -52,6 +52,5 @@ body {
 
 #horlist li {
 	display: inline-block;
-	margin-right: 8%;
-	margin-left: 8%;
+	margin: 0 80px 0 50px;
 }
